[package]
name = "pumpfun-forking"
version = "1.1.2"
description = "Created with Anchor"
author = "Harry Anderson"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumpfun_forking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-amm-cpi/devnet"]
init_if_needed = ["anchor-spl/init-if-needed"]

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = { version = "=0.30.1", features = [
  "associated_token",
  "token",
  "metadata",
] }

borsh = "0.10.3"

raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.30.1" }